[gd_scene load_steps=15 format=3 uid="uid://cope3wve2dub1"]

[ext_resource type="Script" uid="uid://bcfnxv3o7qb3y" path="res://scripts/pause_menu.gd" id="1_n87rw"]
[ext_resource type="PackedScene" uid="uid://i813vheb5uer" path="res://scenes/main menu/options_menu.tscn" id="2_myx47"]
[ext_resource type="AudioStream" uid="uid://dxsf0alrbk1js" path="res://assets/audio/error.wav" id="3_kukqi"]

[sub_resource type="FontFile" id="FontFile_kukqi"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/41/0/ascent = 0.0
cache/0/41/0/descent = 0.0
cache/0/41/0/underline_position = 0.0
cache/0/41/0/underline_thickness = 0.0
cache/0/41/0/scale = 1.0
cache/0/51/0/ascent = 0.0
cache/0/51/0/descent = 0.0
cache/0/51/0/underline_position = 0.0
cache/0/51/0/underline_thickness = 0.0
cache/0/51/0/scale = 1.0
cache/0/61/0/ascent = 0.0
cache/0/61/0/descent = 0.0
cache/0/61/0/underline_position = 0.0
cache/0/61/0/underline_thickness = 0.0
cache/0/61/0/scale = 1.0
cache/0/66/0/ascent = 0.0
cache/0/66/0/descent = 0.0
cache/0/66/0/underline_position = 0.0
cache/0/66/0/underline_thickness = 0.0
cache/0/66/0/scale = 1.0
cache/0/81/0/ascent = 0.0
cache/0/81/0/descent = 0.0
cache/0/81/0/underline_position = 0.0
cache/0/81/0/underline_thickness = 0.0
cache/0/81/0/scale = 1.0
cache/0/91/0/ascent = 0.0
cache/0/91/0/descent = 0.0
cache/0/91/0/underline_position = 0.0
cache/0/91/0/underline_thickness = 0.0
cache/0/91/0/scale = 1.0
cache/0/116/0/ascent = 0.0
cache/0/116/0/descent = 0.0
cache/0/116/0/underline_position = 0.0
cache/0/116/0/underline_thickness = 0.0
cache/0/116/0/scale = 1.0
cache/0/121/0/ascent = 0.0
cache/0/121/0/descent = 0.0
cache/0/121/0/underline_position = 0.0
cache/0/121/0/underline_thickness = 0.0
cache/0/121/0/scale = 1.0
cache/0/126/0/ascent = 0.0
cache/0/126/0/descent = 0.0
cache/0/126/0/underline_position = 0.0
cache/0/126/0/underline_thickness = 0.0
cache/0/126/0/scale = 1.0
cache/0/131/0/ascent = 0.0
cache/0/131/0/descent = 0.0
cache/0/131/0/underline_position = 0.0
cache/0/131/0/underline_thickness = 0.0
cache/0/131/0/scale = 1.0
cache/0/141/0/ascent = 0.0
cache/0/141/0/descent = 0.0
cache/0/141/0/underline_position = 0.0
cache/0/141/0/underline_thickness = 0.0
cache/0/141/0/scale = 1.0
cache/0/146/0/ascent = 0.0
cache/0/146/0/descent = 0.0
cache/0/146/0/underline_position = 0.0
cache/0/146/0/underline_thickness = 0.0
cache/0/146/0/scale = 1.0
cache/0/151/0/ascent = 0.0
cache/0/151/0/descent = 0.0
cache/0/151/0/underline_position = 0.0
cache/0/151/0/underline_thickness = 0.0
cache/0/151/0/scale = 1.0
cache/0/136/0/ascent = 0.0
cache/0/136/0/descent = 0.0
cache/0/136/0/underline_position = 0.0
cache/0/136/0/underline_thickness = 0.0
cache/0/136/0/scale = 1.0
cache/0/111/0/ascent = 0.0
cache/0/111/0/descent = 0.0
cache/0/111/0/underline_position = 0.0
cache/0/111/0/underline_thickness = 0.0
cache/0/111/0/scale = 1.0
cache/0/106/0/ascent = 0.0
cache/0/106/0/descent = 0.0
cache/0/106/0/underline_position = 0.0
cache/0/106/0/underline_thickness = 0.0
cache/0/106/0/scale = 1.0
cache/0/101/0/ascent = 0.0
cache/0/101/0/descent = 0.0
cache/0/101/0/underline_position = 0.0
cache/0/101/0/underline_thickness = 0.0
cache/0/101/0/scale = 1.0
cache/0/86/0/ascent = 0.0
cache/0/86/0/descent = 0.0
cache/0/86/0/underline_position = 0.0
cache/0/86/0/underline_thickness = 0.0
cache/0/86/0/scale = 1.0
cache/0/76/0/ascent = 0.0
cache/0/76/0/descent = 0.0
cache/0/76/0/underline_position = 0.0
cache/0/76/0/underline_thickness = 0.0
cache/0/76/0/scale = 1.0
cache/0/71/0/ascent = 0.0
cache/0/71/0/descent = 0.0
cache/0/71/0/underline_position = 0.0
cache/0/71/0/underline_thickness = 0.0
cache/0/71/0/scale = 1.0
cache/0/56/0/ascent = 0.0
cache/0/56/0/descent = 0.0
cache/0/56/0/underline_position = 0.0
cache/0/56/0/underline_thickness = 0.0
cache/0/56/0/scale = 1.0
cache/0/46/0/ascent = 0.0
cache/0/46/0/descent = 0.0
cache/0/46/0/underline_position = 0.0
cache/0/46/0/underline_thickness = 0.0
cache/0/46/0/scale = 1.0
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_5d2l8"]
font = SubResource("FontFile_kukqi")
font_size = 30

[sub_resource type="FontFile" id="FontFile_7l7mv"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0

[sub_resource type="FontFile" id="FontFile_v4r4p"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0

[sub_resource type="FontFile" id="FontFile_1s2dm"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0

[sub_resource type="FontFile" id="FontFile_88e76"]
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="FontFile_knqa7"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0

[sub_resource type="SystemFont" id="SystemFont_vifqf"]

[sub_resource type="LabelSettings" id="LabelSettings_71k7c"]
font = SubResource("SystemFont_vifqf")
font_size = 100
font_color = Color(0.960784, 0.733333, 0.411765, 1)

[sub_resource type="FontFile" id="FontFile_cmnsq"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_ofnjo"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="PauseContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -68.0
offset_right = 53.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseContainer"]
layout_mode = 2

[node name="GamePausedLabel" type="Label" parent="PauseContainer/VBoxContainer"]
layout_mode = 2
text = "Game Paused"
label_settings = SubResource("LabelSettings_5d2l8")
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_7l7mv")
theme_override_font_sizes/font_size = 20
text = "Resume Game"

[node name="RestartButton" type="Button" parent="PauseContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_v4r4p")
theme_override_font_sizes/font_size = 20
text = "Restart Level"

[node name="MenuButton" type="Button" parent="PauseContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_1s2dm")
theme_override_font_sizes/font_size = 20
text = "Options Menu"

[node name="ReturntoMenu" type="Button" parent="PauseContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_88e76")
theme_override_font_sizes/font_size = 20
text = "Return to Main Menu"

[node name="QuitGameButton" type="Button" parent="PauseContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_knqa7")
theme_override_font_sizes/font_size = 20
text = "Quit Game"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -259.0
offset_top = 66.0
offset_right = 259.0
offset_bottom = 166.0
grow_horizontal = 2
text = "AFTERMATH"
label_settings = SubResource("LabelSettings_71k7c")
horizontal_alignment = 1
vertical_alignment = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsMenu" parent="MarginContainer" instance=ExtResource("2_myx47")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_kukqi")

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 90.0
grow_vertical = 0
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("FontFile_cmnsq")
text = "Version 0.0.0"
label_settings = SubResource("LabelSettings_ofnjo")
vertical_alignment = 2

[connection signal="pressed" from="PauseContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="PauseContainer/VBoxContainer/ReturntoMenu" to="." method="_on_returnto_menu_pressed"]
[connection signal="pressed" from="PauseContainer/VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
